<resources>
    <string name="app_name">快查英语</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorite_groups">单词组</string>
    <string name="action_help">帮助</string>
    <string name="open_search_view">开启悬浮窗</string>
    <string name="close_search_view">关闭悬浮窗</string>
    <string name="nav_toggle_night_mode">夜间模式</string>
    <string name="input_hint">请输入中/英文</string>
    <string name="translate_error">查询失败</string>
    <string name="translate_hint">在此输入需要翻译的文本</string>
    <string name="have_favorite">成功加入单词本%1$s</string>
    <string name="have_remove_favorite">成功移除单词</string>

    <string name="export_file">导出</string>
    <string name="export_file_desc">
        <font color="#ff5722"><b>将单词本以文件形式保存到手机</b></font>\n
        支持导出以下格式：\n
        <font color="#2196f3"><b>.doc</b></font> 可用于打印，不可用于导入。\n
        <font color="#2196f3"><b>.txt</b></font> 可用于打印，不可用于导入。\n
        <font color="#2196f3"><b>.xml</b></font> 可用于导入【快查英语App】和【有道词典PC版】。您可通过【有道词典PC版】将单词本导入并同步至有道云。</string>
    <string name="export_doc">.doc</string>
    <string name="export_txt">.txt</string>
    <string name="export_xml">.xml</string>
    <string name="export_doc_dir">doc</string>
    <string name="export_txt_dir">txt</string>
    <string name="export_xml_dir">xml</string>
    <string name="export_doc_desc"></string>
    <string name="export_file_save_name">保存文件名</string>
    <string-array name="export_spinner_entries">
        <item>.xml</item>
        <item>.doc</item>
        <item>.txt</item>
    </string-array>


    <string name="generate_file_success">生成文件保存在%1$s</string>
    <string name="generate_file_failed">文件生成出现异常</string>

    <string-array name="export_group_entries">
        <item>所有单词</item>
    </string-array>
    <string name="export_directory_desc"><font color="#000000"><b>文件将保存在</b></font></string>
    <string name="export_directory_path">/手机存储/efastquery/%1$s/</string>
    <string name="export_save">保存</string>
    <string name="export_select_group">导出单词组</string>
    <string name="export_input_file_name"><font color="#000000"><b>输入文件名</b></font></string>
    <string name="group_default">所有单词</string>
    <string name="export_file_name_need">请输入文件名</string>
    <string name="export_file_success">
        <font color="#f44336">导</font>
        <font color="#9c27b0">出</font>
        <font color="#ff9800">文</font>
        <font color="#03a9f4">件</font>
        <font color="#FF4081">成</font>
        <font color="#3F51B5">功</font></string>
    <string name="export_success_check">查看</string>
    <string name="export_success_share">分享</string>

    <string name="import_file">导入</string>
    <string name="favorite_book">单词本</string>
    <string name="home">首页</string>

    <string name="permission_not_granted">获取『读写外部存储』权限失败，将导致导入和导出功能无法正常使用！</string>
    <string name="select_file_import">选择xml文件导入</string>
    <string name="please_install_file_manager">请先安装文件管理器</string>
    <string name="just_support_xml">目前仅支持有道词典PC版导出的.xml格式导入！</string>

    <string name="file_manager_file_not_exist">文件已经不存在</string>
    <string name="file_manager_folder_is_empty">这是一个空文件夹</string>
    <string name="file_manager_phone_folder">手机存储</string>
    <string name="file_manager_new_folder">新建文件夹%1$s</string>
    <string name="file_manager_create">创建</string>
    <string name="file_manager_cancel">取消</string>
    <string name="file_manager_file_already_exist">文件已经存在</string>
    <string name="file_manager_file_name_invalid">文件名为空或包含非法字符</string>
    <string name="file_manager_extension_desc">说明</string>
    <string name="file_manager_desc_xml">XML用于导入快查英语/有道词典PC版</string>
    <string name="file_manager_desc_doc">DOC用于打印，不可导入</string>
    <string name="file_manager_desc_txt">TXT用于打印，不可导入</string>
    <string name="file_manager_create_group">创建分组</string>
    <string name="file_manager_select_group">选择</string>
    <string name="file_manager_create_group_success">创建分组成功</string>
    <string name="file_manager_create_group_failed">创建分组失败</string>

    <string name="import_select_group">导入单词组</string>
    <string name="import_confirm">确认</string>
    <string name="import_confirm_info">将导入文件%1$s至『%2$s』单词组</string>
    <string name="import_choose_group">选择分组</string>

    <string name="favorite_empty">空空如也，收藏一些吧！</string>

    <string name="write_listen_tech_from">语音技术由<font color="#f44336"><b>科大讯飞</b></font>提供</string>

    <string name="overlay_confirm_title">开启快查功能</string>
    <string name="overlay_confirm_content">请在手机设置中开启悬浮窗权限，以体验快查功能</string>
    <string name="overlay_confirm_negative">暂不开启</string>
    <string name="overlay_confirm_positive"><font color="#f44336"><b>去开启</b></font></string>

    <!--login-->
    <string name="login_text">登录</string>
    <string name="login">登"&#160;"录</string>
    <string name="register">注"&#160;""&#160;""&#160;""&#160;"册</string>
    <string name="login_phonenumber">手机号码</string>
    <string name="login_phone_number_or_name">手机号码/用户名</string>
    <string name="login_password">密码</string>
    <string name="login_forget_password">忘记密码</string>

    <!--register-->
    <string name="register_text">注册</string>
    <string name="register_verification_text">确认验证码</string>
    <string name="register_verification_code">验证码</string>
    <string name="register_verification_wait">请稍候~</string>
    <string name="register_already">已经注册？点此登录</string>
    <string name="register_get_sms_code">获取验证码</string>
    <string name="register_phone_number_invalid">手机号码格式不正确</string>
    <string name="register_password_invalid">密码不能少于6位</string>
    <string name="register_password_hint">密码至少6位</string>
    <string name="register_sms_sending">正在获取验证码</string>
    <string name="register_sms_success">获取验证码成功</string>
    <string name="register_sms_fail">获取验证码失败</string>
    <string name="register_phone_registed">该手机号码已被注册！</string>

    <!--verify-->
    <string name="verify_username">用户名</string>
    <string name="verify_sex_male">男生</string>
    <string name="verify_sex_female">女生</string>
    <string name="verify_sex_profile">选择头像&#038;性别</string>
    <string name="verify_sex_rechoose">长按头像可重选</string>

    <string name="verify_clip_profile">裁剪头像</string>
    <string name="verify_clip_profile_failed">选取头像失败</string>
    <string name="verify_please_input_code">请输入验证码</string>
    <string name="verify_please_input_name">请输入用户名</string>
    <string name="verify_please_choose_profile">选个头像吧</string>
    <string name="verify_user_name_used">该用户名已被使用！</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败</string>

    <string name="register_success_but_profile_failed">注册成功，上传头像失败，将使用默认头像</string>
    <string name="register_failed_unknown_error">发生未知错误</string>

    <string name="login_please_input_account">请输入用户名或手机号码</string>
    <string name="login_successful">登录成功</string>
    <string name="login_failed">登录失败</string>

    <!--clip image-->
    <string name="clip_image_text">裁剪头像</string>

    <!--settings-->
    <string name="settings">设置</string>

    <string name="find_password">找回密码</string>
    <string name="reset_password">重置密码</string>
    <string name="new_password">新密码</string>
    <string name="old_password">旧密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="reset_password_successful">重置密码成功</string>
    
    <string name="new_user">新用户</string>
    <string name="network_unreachable">无网络连接</string>

    <string name="favorite">收藏</string>
    <string name="export_import">导入和导出</string>
    <string name="listen_translate">汉英听译</string>
    
    <string name="accessibility_des">开启后，在微信、QQ等聊天页面点击或长按聊天记录，即可查词。</string>
</resources>
