<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/home_nav"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_export"
            android:icon="@mipmap/export_nav"
            android:title="@string/export_file" />
        <item
            android:id="@+id/nav_import"
            android:icon="@mipmap/import_nav"
            android:title="@string/import_file" />
        <item
            android:id="@+id/nav_favorite_book"
            android:icon="@mipmap/favorite_nav"
            android:title="@string/favorite_book" />
    </group>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_open"
                android:icon="@mipmap/search_button"
                android:title="@string/open_search_view" />
            <item
                android:id="@+id/nav_close"
                android:icon="@mipmap/delete_input"
                android:title="@string/close_search_view" />
            <item
                android:id="@+id/nav_night_mode"
                android:icon="@mipmap/speak"
                android:title="@string/nav_toggle_night_mode"
                />
        </menu>
    </item>

</menu>
