<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_900"
    android:orientation="vertical"
    android:paddingLeft="@dimen/register_app_name_padding"
    android:paddingRight="@dimen/register_app_name_padding">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        app:srcCompat="@drawable/app_name_drawable" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/verification_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/verification_editor"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/register_verification_code"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:textColorHint="#dedede" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/username_editor"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/verify_username"
            android:textColor="@color/white" />
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/user_sex_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/verify_sex_male"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/user_sex_female"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/verify_sex_female"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/register"
        android:textColor="@color/selector_send_code"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/register_already"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/register_already"
        android:textColor="@color/selector_forget_password" />
</LinearLayout>
