<?xml version="1.0" encoding="utf-8"?>
<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/find_password_switcher"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/register_app_name_padding"
    android:paddingRight="@dimen/register_app_name_padding"
    tools:context="bravest.ptt.efastquery.activity.FindPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_dp_32"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phoneNumberContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/login_phonenumber"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textSize="16dp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/request_sms_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_register_h"
            android:layout_marginTop="@dimen/margin_dp_16"
            android:background="@drawable/login_selector"
            android:text="@string/register_get_sms_code"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_dp_32"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/verification_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/verification_editor"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/register_verification_code"
                android:inputType="numberDecimal"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passWordContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/selector_password_visibility_toggle">

            <EditText
                android:id="@+id/passWord"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/register_password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/reset_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_register_h"
            android:layout_marginTop="@dimen/margin_dp_16"
            android:background="@drawable/login_selector"
            android:text="@string/reset_password"
            android:textSize="18sp" />
    </LinearLayout>
</ViewSwitcher>
