<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_900"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/register_app_name_padding"
        app:srcCompat="@drawable/app_name_drawable" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/register_app_name_padding"
        android:paddingRight="@dimen/register_app_name_padding">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phoneNumberContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/login_phonenumber"
                android:inputType="numberDecimal"
                android:textColor="@color/white"
                android:textColorHint="#dedede" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/verification_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneNumberContainer"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/verification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_weight="3"
                android:textColorHint="@color/white">

                <EditText
                    android:id="@+id/verification_code"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/register_verification_code"
                    android:inputType="numberDecimal"
                    android:textColor="@color/white" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/verification_code_send"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/login_selector"
                android:text="@string/register_verification_code"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passWordContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/verification_panel"
            android:textColorHint="@color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/selector_password_visibility_toggle">>

            <EditText
                android:id="@+id/passWord"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_register_h"
            android:layout_below="@id/passWordContainer"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_selector"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="23sp" />
    </RelativeLayout>
    <TextView
        android:id="@+id/register_already"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/register_already"
        android:textColor="@color/selector_forget_password" />
</LinearLayout>
