<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/register_app_name_padding"
        android:visibility="gone"
        app:srcCompat="@drawable/app_name_drawable" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_dp_32"
        android:paddingLeft="@dimen/register_app_name_padding"
        android:paddingRight="@dimen/register_app_name_padding">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/accountContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/accountEditor"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/login_phone_number_or_name"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passWordContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/accountContainer"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/selector_password_visibility_toggle">

            <EditText
                android:id="@+id/passWordEditor"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_register_h"
            android:layout_below="@id/passWordContainer"
            android:layout_marginTop="@dimen/margin_dp_16"
            android:background="@drawable/login_selector"
            android:text="@string/login"
            android:textSize="23sp" />
    </RelativeLayout>

    <!--<TextView-->
    <!--android:id="@+id/login_forget_password"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="10dp"-->
    <!--android:clickable="true"-->
    <!--android:focusable="true"-->
    <!--android:gravity="center"-->
    <!--android:padding="10dp"-->
    <!--android:text="@string/login_forget_password"-->
    <!--android:textColor="@color/selector_forget_password" />-->

</LinearLayout>
